--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.12",
+    "mongoose": "^5.11.12"
+    
+  },
+  "devDependencies": {
     "nodemon": "^2.0.7"
   }
 }
